--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^3.7.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.14"
   }
 }
