--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Daniihh/daniis-typescript-utils#readme",
   "dependencies": {
+    "callsites": "^3.1.0",
+    "error-stack-parser": "^2.0.4",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^3.7.2"
