--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "callsites": "^3.1.0",
     "error-stack-parser": "^2.0.4",
     "gulp": "^4.0.2",
+    "gulp-minify": "^3.1.0",
+    "gulp-rename": "^2.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "merge-stream": "^2.0.0",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
