--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["esnext", "es2017.object", "esnext.array", "es2020.string"],
-    "module": "commonjs",
+    "lib": ["ESNext", "ES2017.Object", "ESNext.array", "ES2020.String"],
     "esModuleInterop": true,
     "experimentalDecorators": true
   }
