--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "daniis-typescript-utils",
+  "name": "daniis-tools",
   "version": "1.0.0",
   "description": "Soon™ (Not a serious use of the TM emoji)",
-  "main": "index.js",
+  "main": "out/commonjs-tools.js",
+  "types": "out/tools.d.ts",
   "scripts": {
     "test": "mocha",
     "start": "gulp compile"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^12.12.14",
     "gulp": "^4.0.2",
+    "gulp-filter": "^6.0.0",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
