--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "author": "Daniel Conley",
   "license": "GPL-3.0",
   "keywords": [
-    "tools", "types", "prototype", "extension", "methods", "utility", "util"
+    "tools",
+    "types",
+    "prototype",
+    "extension",
+    "methods",
+    "utility",
+    "util"
   ],
   "repository": {
     "type": "git",
