--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "author": "Daniel Conley",
   "license": "GPL-3.0",
   "keywords": [
-    "tools", "types", "prototype", "extension", "methods", "utility", "util"
+    "tools",
+    "types",
+    "prototype",
+    "extension",
+    "methods",
+    "utility",
+    "util"
   ],
   "repository": {
     "type": "git",
@@ -24,6 +30,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^12.12.14",
+    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-filter": "^6.0.0",
     "gulp-minify": "^3.1.0",
